# bentolab

./: .editorconfig  .gitignore  AGENTS.md  AGENT_LEARNINGS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.claude/rules/: ble-protocol.md  tools-hygiene.md
.github/: dependabot.yml
.github/templates/: llms.txt.tpl
.github/workflows/: ci.yml  codeql.yml  generate-sbom.yaml  links.yml  write-llms-txt.yaml
bentolab/: __init__.py  _data_dirs.py  _logging.py  _profile_io.py  _slugs.py  _store.py  ble_client.py  devices.py  models.py  profiles.py  protocol.py  runs.py  thermocycler.py  wifi_client.py
bentolab/api/: _run_service.py  _validation.py  app.py  auth.py  events.py  models.py  runs.py
bentolab/cli/: __init__.py  _device.py  _format.py  logs.py  main.py  monitor.py  profile.py  run.py  scan.py  serve.py  status.py  stop.py  token.py
bentolab/tui/: __init__.py  _assets.py  _stages.py  app.py  messages.py  style.tcss
bentolab/tui/ascii-art/: bento-art.txt
bentolab/tui/modals/: __init__.py  confirm_quit.py  confirm_run.py  scan_modal.py  splash.py
bentolab/tui/services/: __init__.py  orphan_attach.py  run_history.py  session.py
bentolab/tui/widgets/: __init__.py  device_list.py  profile_list.py  program_diagram.py  run_history.py  status_pane.py  temp_chart.py
docs/: LICENSING_ASSESSMENT.md  ble-gatt-profile.md  cli-scripting.md  firmware-analysis.md  llms.txt  protocol-commands.md  wifi-protocol.md
docs/SBOM/: syft-scan.spdx.json
examples/: elabftw_demo.py
tests/: test_api.py  test_ble_client.py  test_cli.py  test_cli_commands.py  test_cli_token.py  test_cli_tui_launch.py  test_connect_refresh.py  test_devices_registry.py  test_keep_alive.py  test_logging.py  test_models.py  test_models_yaml.py  test_orphan_attach.py  test_profiles.py  test_program_diagram.py  test_protocol.py  test_run_history.py  test_runs.py  test_stage_at.py  test_stages.py  test_store.py  test_temp_chart.py  test_thermocycler.py  test_tui_app.py  test_tui_assets.py  test_tui_messages.py  test_tui_modals.py  test_tui_session.py  test_tui_splash.py  test_tui_widgets.py  test_wifi_client.py
tools/: apk_strings.py  ble_commander.py  ble_monitor.py  ble_scanner.py  capture_update.py  keep_alive_soak.py  log_viewer.py  session_logger.py  wifi_monitor.py  wifi_scanner.py
tools/openocd/: bento-sam3x.cfg
