[project]
name = "bentolab"
version = "0.1.0"
description = "Reverse-engineered Python control library for Bento Lab PCR workstations"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.22.0",
    "rich>=13.0.0",
    "construct>=2.10.0",
    "zeroconf>=0.80.0",
    "pyshark>=0.6.0",
    "scapy>=2.5.0",
    "aiohttp>=3.9.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
